Initial draft of cancellation
